k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openclick
  labels:
    app: openclick
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openclick
  template:
    metadata:
      labels:
        app: openclick
    spec:
      containers:
        - name: openclick
          image: ghcr.io/gofreego/openclick:pilot-c8730d1
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
            - name: grpc
              containerPort: 8081
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
