k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openclick
spec:
  selector:
    app: openclick
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: grpc
      port: 8081
      targetPort: grpc
